Updating circuito page

--- a/circuito.html
+++ b/circuito.html
@@ -48,8 +48,10 @@
         </div>
     </header>
 
-    <main class="bg-blue-950 h-82h flex items-center justify-center flex-col gap-y-4">
-        <img src="src/images/circuito-logo.png" class="h-40h lg:object-contain lg:h-60h" alt="Informações sobre o circuito">
+    <main class="bg-blue-950  flex items-center justify-center flex-col gap-y-4">
+        <!-- <img src="src/images/logo-jogador.svg" class="h-82h absolute top-0 left-1" alt=""> -->
+        <img src="src/images/hugo-hoyama.jpg" class="w-11/12 rounded mt-4 lg:h-40h lg:w-auto" alt="Hugo Hoyama jogando tênis de mesa">
+        <img src="src/images/circuito-logo.png" class="h-30h lg:object-contain lg:h-60h" alt="Informações sobre o circuito">
         <a href="src/images/circuito-layout.jpeg" target="_blank" id="circuito__main--link" class="uppercase text-white bg-black font-barlow text-xl rounded px-4 py-2 hover:bg-green-950 hover:duration-500">Layout oficial</a>
     </main>
 
