--- a/regulamento.html
+++ b/regulamento.html
@@ -155,7 +155,8 @@
                     <h2 class="uppercase text-xl bg-green-900 px-2 mb-2 rounded text-center">Equipamentos autorizados
                         para as competições de cada atleta inscrito:</h2>
                     <article class="flex flex-col items-center pb-6">
-                        <h3 class="uppercase text-xl text-center bg-green-900 px-2 rounded">Mesatenistas inscritos nas categorias de
+                        <h3 class="uppercase text-xl text-center bg-green-900 px-2 rounded">Mesatenistas inscritos nas
+                            categorias de
                             federados:</h3>
                         <ul class="list-disc list-inside">
                             <li>Apenas raquetes autorizadas pela ITTF;</li>
@@ -165,7 +166,8 @@
                     </article>
 
                     <article class="flex flex-col items-center pb-6">
-                        <h3 class="uppercase text-xl text-center bg-green-900 px-2 rounded">Praticantes de ping pong inscritos nas
+                        <h3 class="uppercase text-xl text-center bg-green-900 px-2 rounded">Praticantes de ping pong
+                            inscritos nas
                             categorias:</h3>
                         <ul class="list-disc list-inside">
                             <li>Raquetes para ping pong sem necessidade de serem autorizadas pela ITTF, com qualquer
@@ -253,7 +255,8 @@
                 </article>
 
                 <article class="flex flex-col items-center pb-6">
-                    <h3 class="uppercase text-xl text-center bg-green-900 px-2 rounded">Características dos inscritos por etapa:
+                    <h3 class="uppercase text-xl text-center bg-green-900 px-2 rounded">Características dos inscritos
+                        por etapa:
                     </h3>
                     <ul class="list-disc list-inside">
                         <li>
@@ -322,7 +325,8 @@
 
             <section id="divisoes">
                 <article class="flex flex-col items-center pb-6">
-                    <h3 class="uppercase text-xl text-center bg-green-900 px-2 mb-2 rounded">Divisões que serão disputadas no
+                    <h3 class="uppercase text-xl text-center bg-green-900 px-2 mb-2 rounded">Divisões que serão
+                        disputadas no
                         circuito:</h3>
                     <h4 class="uppercase bg-green-900 px-2 rounded">Masculino e Feminino:</h4>
                     <h5>Inscritos ou inscritas nas categorias de Ping Pong:</h5>
@@ -354,69 +358,72 @@
             </section>
 
             <section id="ranking">
-                <h3 class="uppercase bg-green-900 text-xl px-2 mb-2 rounded w-auto text-center">Ranking e forma de pontuação em cada
-                    modalidade e suas categorias:</h3>
+                <div class="flex flex-col items-center">
+                    <h3 class="uppercase bg-green-900 text-xl px-2 mb-2 rounded text-center">Ranking e forma de
+                        pontuação em cada
+                        modalidade e suas categorias:</h3>
 
-                <article class="flex flex-col items-center pb-6">
-                    <h4 class="bg-green-900 px-2 rounded">Competidores das categorias de PING PONG</h4>
-                    <ul class="list-disc list-inside pb-4">
-                        <li>1º lugar: 25 pontos;</li>
-                        <li>2º lugar: 18 pontos;</li>
-                        <li>Dois 3º lugares: 15 pontos;</li>
-                        <li>5º ao 8º lugar: 12 pontos.</li>
-                    </ul>
-                </article>
+                    <article class="flex flex-col items-center pb-6">
+                        <h4 class="bg-green-900 px-2 rounded">Competidores das categorias de PING PONG</h4>
+                        <ul class="list-disc list-inside pb-4">
+                            <li>1º lugar: 25 pontos;</li>
+                            <li>2º lugar: 18 pontos;</li>
+                            <li>Dois 3º lugares: 15 pontos;</li>
+                            <li>5º ao 8º lugar: 12 pontos.</li>
+                        </ul>
+                    </article>
 
-                <article class="flex flex-col items-center pb-6">
-                    <h4 class="bg-green-900 px-2 rounded">Competidores das categorias de TÊNIS DE MESA</h4>
-                    <h5>Divisão A</h5>
-                    <ul class="list-disc list-inside pb-4">
-                        <li>1º lugar: 150 pontos;</li>
-                        <li>2º lugar: 108 pontos;</li>
-                        <li>Dois 3º lugares: 90 pontos;</li>
-                        <li>5º ao 8º lugar: 72 pontos.</li>
-                    </ul>
+                    <article class="flex flex-col items-center pb-6">
+                        <h4 class="bg-green-900 px-2 rounded">Competidores das categorias de TÊNIS DE MESA</h4>
+                        <h5>Divisão A</h5>
+                        <ul class="list-disc list-inside pb-4">
+                            <li>1º lugar: 150 pontos;</li>
+                            <li>2º lugar: 108 pontos;</li>
+                            <li>Dois 3º lugares: 90 pontos;</li>
+                            <li>5º ao 8º lugar: 72 pontos.</li>
+                        </ul>
 
-                    <h4>Divisão B</h4>
-                    <ul class="list-disc list-inside pb-4">
-                        <li>1º lugar: 125 pontos;</li>
-                        <li>2º lugar: 90 pontos;</li>
-                        <li>Dois 3º lugares: 75 pontos;</li>
-                        <li>5º ao 8º lugar: 60 pontos.</li>
-                    </ul>
+                        <h4>Divisão B</h4>
+                        <ul class="list-disc list-inside pb-4">
+                            <li>1º lugar: 125 pontos;</li>
+                            <li>2º lugar: 90 pontos;</li>
+                            <li>Dois 3º lugares: 75 pontos;</li>
+                            <li>5º ao 8º lugar: 60 pontos.</li>
+                        </ul>
 
-                    <h4>Divisão C</h4>
-                    <ul class="list-disc list-inside pb-4">
-                        <li>1º lugar: 100 pontos;</li>
-                        <li>2º lugar: 72 pontos;</li>
-                        <li>Dois 3º lugares: 60 pontos;</li>
-                        <li>5º ao 8º lugar: 48 pontos.</li>
-                    </ul>
+                        <h4>Divisão C</h4>
+                        <ul class="list-disc list-inside pb-4">
+                            <li>1º lugar: 100 pontos;</li>
+                            <li>2º lugar: 72 pontos;</li>
+                            <li>Dois 3º lugares: 60 pontos;</li>
+                            <li>5º ao 8º lugar: 48 pontos.</li>
+                        </ul>
 
-                    <h4>Divisão D</h4>
-                    <ul class="list-disc list-inside pb-4">
-                        <li>1º lugar: 75 pontos;</li>
-                        <li>2º lugar: 54 pontos;</li>
-                        <li>Dois 3º lugares: 45 pontos;</li>
-                        <li>5º ao 8º lugar: 36 pontos.</li>
-                    </ul>
+                        <h4>Divisão D</h4>
+                        <ul class="list-disc list-inside pb-4">
+                            <li>1º lugar: 75 pontos;</li>
+                            <li>2º lugar: 54 pontos;</li>
+                            <li>Dois 3º lugares: 45 pontos;</li>
+                            <li>5º ao 8º lugar: 36 pontos.</li>
+                        </ul>
 
-                    <h4>Divisão E</h4>
-                    <ul class="list-disc list-inside pb-4">
-                        <li>1º lugar: 50 pontos;</li>
-                        <li>2º lugar: 36 pontos;</li>
-                        <li>Dois 3º lugares: 30 pontos;</li>
-                        <li>5º ao 8º lugar: 24 pontos.</li>
-                    </ul>
+                        <h4>Divisão E</h4>
+                        <ul class="list-disc list-inside pb-4">
+                            <li>1º lugar: 50 pontos;</li>
+                            <li>2º lugar: 36 pontos;</li>
+                            <li>Dois 3º lugares: 30 pontos;</li>
+                            <li>5º ao 8º lugar: 24 pontos.</li>
+                        </ul>
 
-                    <h4>Divisão F</h4>
-                    <ul class="list-disc list-inside pb-4">
-                        <li>1º lugar: 25 pontos;</li>
-                        <li>2º lugar: 18 pontos;</li>
-                        <li>Dois 3º lugares: 15 pontos;</li>
-                        <li>5º ao 8º lugar: 12 pontos.</li>
-                    </ul>
-                </article>
+                        <h4>Divisão F</h4>
+                        <ul class="list-disc list-inside pb-4">
+                            <li>1º lugar: 25 pontos;</li>
+                            <li>2º lugar: 18 pontos;</li>
+                            <li>Dois 3º lugares: 15 pontos;</li>
+                            <li>5º ao 8º lugar: 12 pontos.</li>
+                        </ul>
+                    </article>
+                </div>
             </section>
 
             <section id="formato" class="flex flex-col items-center">
