Refactoring circuito bg

--- a/circuito.html
+++ b/circuito.html
@@ -22,21 +22,26 @@
 </head>
 
 <body class="bg-blue-950">
-    <header class="bg-white flex items-center justify-between p-2 font-barlow">
-        <img src="src/images/circuito-logo.png" class="h-12 lg:h-16 lg:ml-2" alt="Logo do circuito Ibra de Tênis de Mesa">
+    <header class="bg-white flex items-center justify-between p-2 font-barlow h-10h">
+        <img src="src/images/circuito-logo.png" class="h-12 lg:h-16 lg:ml-2"
+            alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
+                <li
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
                     <a href="index.html">Início</a>
                 </li>
 
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
+                <li
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
                     <a href="regulamento.html">Regulamento</a>
                 </li>
 
-                <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
-                    <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" target="_blank">Inscreva-se</a>
+                <li
+                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
+                    <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
+                        target="_blank">Inscreva-se</a>
                 </li>
             </ul>
         </nav>
@@ -48,11 +53,19 @@
         </div>
     </header>
 
-    <main class="bg-blue-950  flex items-center justify-center flex-col gap-y-4">
-        <!-- <img src="src/images/logo-jogador.svg" class="h-82h absolute top-0 left-1" alt=""> -->
-        <img src="src/images/hugo-hoyama.jpg" class="w-11/12 rounded mt-4 lg:h-40h lg:w-auto" alt="Hugo Hoyama jogando tênis de mesa">
-        <img src="src/images/circuito-logo.png" class="h-30h lg:object-contain lg:h-60h" alt="Informações sobre o circuito">
-        <a href="src/images/circuito-layout.jpeg" target="_blank" id="circuito__main--link" class="uppercase text-white bg-black font-barlow text-xl rounded px-4 py-2 hover:bg-green-950 hover:duration-500">Layout oficial</a>
+    <main style="background-image: url('src/images/1.jpg'); background-size: cover;"
+        class="h-90h flex items-center justify-center flex-col gap-y-4">
+
+        <div class="bg-white p-4 rounded flex flex-col items-center w-4/5 max-w-md lg:w-auto">
+            <h1 class="uppercase font-barlow font-bold text-2xl lg:pb-4">Circuito Ibra 2023</h1>
+            <img src="src/images/logo-jogador.svg" class="hidden lg:block lg:absolute left-8 bottom-4 lg:h-60" alt="">
+            <div class="flex flex-col items-center gap-y-4">
+                <img src="src/images/WhatsApp Image 2023-05-10 at 00.14.57.jpeg" class="lg:object-cover lg:w-auto lg:h-60h" alt="">
+                <a href="src/images/circuito-layout.jpeg" target="_blank" id="circuito__main--link"
+                    class="uppercase text-white bg-black font-barlow text-xl rounded px-4 py-2 hover:bg-green-950 hover:duration-500">Saiba
+                    mais</a>
+            </div>
+        </div>
     </main>
 
     <script src="src/js/main.js"></script>
