--- a/circuito.html
+++ b/circuito.html
@@ -23,7 +23,7 @@
 
 <body class="bg-blue-950">
     <header class="bg-white flex items-center justify-between p-2 font-barlow h-10h">
-        <img src="src/images/circuito-logo.png" class="h-12 lg:h-16 lg:ml-2"
+        <img src="src/images/circuito-logo.png" class="h-12 lg:h-14 lg:ml-2"
             alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
@@ -56,11 +56,11 @@
     <main style="background-image: url('src/images/1.jpg'); background-size: cover;"
         class="h-90h flex items-center justify-center flex-col gap-y-4">
 
-        <div class="bg-white p-4 rounded flex flex-col items-center w-4/5 max-w-md lg:w-auto">
+        <div class="bg-white p-4 rounded-lg flex flex-col items-center w-4/5 max-w-md lg:w-auto">
             <h1 class="uppercase font-barlow font-bold text-2xl lg:pb-4">Circuito Ibra 2023</h1>
             <img src="src/images/logo-jogador.svg" class="hidden lg:block lg:absolute left-8 bottom-4 lg:h-60" alt="">
             <div class="flex flex-col items-center gap-y-4">
-                <img src="src/images/WhatsApp Image 2023-05-10 at 00.14.57.jpeg" class="lg:object-cover lg:w-auto lg:h-60h" alt="">
+                <img src="src/images/circuito-layout-2.jpeg" class="lg:object-cover lg:w-auto lg:h-60h rounded" alt="">
                 <a href="src/images/circuito-layout.jpeg" target="_blank" id="circuito__main--link"
                     class="uppercase text-white bg-black font-barlow text-xl rounded px-4 py-2 hover:bg-green-950 hover:duration-500">Saiba
                     mais</a>
@@ -69,5 +69,4 @@
     </main>
 
     <script src="src/js/main.js"></script>
-    <script src="src/js/circuito.js"></script>
 </body>
