Refactoring circuito bg

--- a/circuito.html
+++ b/circuito.html
@@ -53,19 +53,8 @@
         </div>
     </header>
 
-    <main style="background-image: url('src/images/1.jpg'); background-size: cover;"
-        class="h-90h flex items-center justify-center flex-col gap-y-4">
-
-        <div class="bg-white p-4 rounded-lg flex flex-col items-center w-4/5 max-w-md lg:w-auto">
-            <h1 class="uppercase font-barlow font-bold text-2xl lg:pb-4">Circuito Ibra 2023</h1>
-            <img src="src/images/logo-jogador.svg" class="hidden lg:block lg:absolute left-8 bottom-4 lg:h-60" alt="">
-            <div class="flex flex-col items-center gap-y-4">
-                <img src="src/images/circuito-layout-2.jpeg" class="lg:object-cover lg:w-auto lg:h-60h rounded" alt="">
-                <a href="src/images/circuito-layout.jpeg" target="_blank" id="circuito__main--link"
-                    class="uppercase text-white bg-black font-barlow text-xl rounded px-4 py-2 hover:bg-green-950 hover:duration-500">Saiba
-                    mais</a>
-            </div>
-        </div>
+    <main style="background-image: url('src/images/circuito-layout-2.jpeg'); background-size: cover;" class="bg-blue-950 flex justify-center">
+        <img src="src/images/circuito-layout-2.jpeg" class="object-cover w-screen" alt="">
     </main>
 
     <script src="src/js/main.js"></script>
