--- a/circuito.html
+++ b/circuito.html
@@ -21,9 +21,9 @@
     <title>O Circuito</title>
 </head>
 
-<body class="bg-blue-950">
+<body class="bg-bodyBgColor">
     <header class="bg-white flex items-center justify-between p-2 font-barlow h-10h">
-        <img src="src/images/circuito-logo.png" class="h-12 lg:h-14 lg:ml-2"
+        <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2"
             alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
@@ -53,8 +53,9 @@
         </div>
     </header>
 
-    <main style="background-image: url('src/images/circuito-layout-2.jpeg'); background-size: cover;" class="bg-blue-950 flex justify-center">
-        <img src="src/images/circuito-layout-2.jpeg" class="object-cover w-screen" alt="">
+    <main class="flex h-70h lg:h-auto">
+        <img src="src/images/circuito-layout.jpeg" alt="" class="object-contain h-90h lg:hidden">
+        <img src="src/images/circuito-layout-2.jpeg" class="hidden lg:object-cover lg:w-screen lg:block" alt="">
     </main>
 
     <script src="src/js/main.js"></script>
