--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body class="box-border">
     <header class="flex items-center justify-between p-2 font-barlow lg:p-0">
-        <img src="src/images/logo.jpeg" class="h-12 lg:h-14 lg:ml-2" alt="Logo da Ibra Academia de Tênis de Mesa">
+        <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo da Ibra Academia de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
         lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
