Refactoring circuito images

--- a/circuito.html
+++ b/circuito.html
@@ -53,9 +53,9 @@
         </div>
     </header>
 
-    <main class="flex h-70h lg:h-auto">
-        <img src="src/images/circuito-layout.jpeg" alt="" class="object-contain h-90h lg:hidden">
-        <img src="src/images/circuito-layout-2.jpeg" class="hidden lg:object-cover lg:w-screen lg:block" alt="">
+    <main class="flex justify-center lg:h-auto">
+        <img src="src/images/circuito-layout.jpeg" alt="Layout do circuito" class="object-contain h-90h lg:hidden">
+        <img src="src/images/circuito-layout-2.jpeg" class="hidden lg:object-cover lg:w-screen lg:block" alt="Layout com Hugo Hoyama">
     </main>
 
     <script src="src/js/main.js"></script>
