--- a/parceiros.html
+++ b/parceiros.html
@@ -41,8 +41,8 @@
         </div>
     </header>
 
-    <main class="bg-blue-950">
-        <h1 class="text-center uppercase text-white text-3xl font-barlow py-4 lg:w-full">Nossos parceiros</h1>
+    <main class="bg-white lg:bg-blue-950">
+        <h1 class="text-center uppercase bg-blue-950 text-white text-3xl font-barlow py-4 lg:w-full">Nossos parceiros</h1>
 
         <section id="parceiros" class="flex flex-col items-center lg:justify-between lg:h-screen lg:pt-8">
             <div id="parceiros__container--top" class="flex flex-col items-center lg:flex-row lg:justify-center lg:gap-x-4">
@@ -73,7 +73,7 @@
                 <article
                     class="bg-white p-2 flex flex-col items-center pb-8 section__article--lg">
                     <img src="src/images/parceiros-rc.jpg" class="rounded w-10/12 lg:h-32 lg:object-contain" alt="Logo da RC associados">
-                    <div id="article__text--container" class="m-4 font-barlow w-11/12">
+                    <div id="article__text--container" class="m-4 font-barlow w-10/12">
                         <h2 class="uppercase font-semibold text-center text-xl pb-2">Constantemente desafiando a
                             entregar o melhor aos nossos clientes</h2>
                         <p class="text-justify">Fundado em 2016, atua com destaque na advocacia de litígios e na
@@ -83,7 +83,7 @@
                 </article>
             </div>
 
-            <article class="bg-white p-2 flex flex-col items-center sm:w-10/12 lg:pb-8 lg:w-full">
+            <article class="bg-white p-2 flex flex-col items-center sm:w-screen lg:pb-8 lg:w-full">
                 <img src="src/images/parceiros-prefeitura.jpeg" class="rounded w-10/12 lg:object-contain lg:h-24" alt="Logo da prefeitura de Caruaru">
             </article>
         </section>
