--- a/circuito.html
+++ b/circuito.html
@@ -23,8 +23,7 @@
 
 <body class="bg-bodyBgColor">
     <header class="bg-white flex items-center justify-between p-2 font-barlow h-10h">
-        <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2"
-            alt="Logo do circuito Ibra de Tênis de Mesa">
+        <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
@@ -37,12 +36,6 @@
                     class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
                     <a href="regulamento.html">Regulamento</a>
                 </li>
-
-                <li
-                    class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
-                    <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
-                        target="_blank">Inscreva-se</a>
-                </li>
             </ul>
         </nav>
         <a href="#" class="hidden">Circuito Ibra</a>
@@ -53,9 +46,13 @@
         </div>
     </header>
 
-    <main class="flex justify-center lg:h-auto">
+    <main class="flex items-start justify-center lg:h-auto">
         <img src="src/images/circuito-layout.jpeg" alt="Layout do circuito" class="object-contain h-90h lg:hidden">
-        <img src="src/images/circuito-layout-2.jpeg" class="hidden lg:object-cover lg:w-screen lg:block" alt="Layout com Hugo Hoyama">
+        <img src="src/images/circuito-layout-2.jpeg" class="hidden lg:object-cover lg:w-screen lg:block"
+            alt="Layout com Hugo Hoyama">
+        <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
+            class="bg-green-900 text-white py-4 px-8 rounded-md uppercase lg:text-xl lg:absolute lg:top-24 lg:right-8 hover:bg-black duration-500"
+            target="_blank">Inscreva-se</a>
     </main>
 
     <script src="src/js/main.js"></script>
