--- a/parceiros.html
+++ b/parceiros.html
@@ -83,7 +83,7 @@
                 </article>
             </div>
 
-            <article class="bg-white p-2 flex flex-col items-center sm:w-screen lg:pb-8 lg:w-full">
+            <article class="bg-white p-2 flex flex-col items-center sm:w-screen lg:pb-8 lg:w-full max-w-xl">
                 <img src="src/images/parceiros-prefeitura.jpeg" class="rounded w-10/12 lg:object-contain lg:h-24" alt="Logo da prefeitura de Caruaru">
             </article>
         </section>
