Refactoring circuito button

--- a/circuito.html
+++ b/circuito.html
@@ -46,14 +46,14 @@
         </div>
     </header>
 
-    <main class="flex items-start justify-center lg:h-auto">
-        <img src="src/images/circuito-layout.jpeg" alt="Layout do circuito" class="object-contain h-90h lg:hidden">
+    <main class="flex flex-col items-center justify-center lg:h-auto">
+        <img src="src/images/circuito-layout.jpeg" alt="Layout do circuito" class="object-contain h-78h lg:hidden">
         <img src="src/images/circuito-layout-2.jpeg" class="hidden lg:object-cover lg:w-screen lg:block"
             alt="Layout com Hugo Hoyama">
         <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t"
-            class="bg-green-900 text-white py-4 px-8 rounded-md uppercase lg:text-xl lg:absolute lg:top-24 lg:right-8 hover:bg-black duration-500"
+            class="bg-green-900 text-white py-3 px-8 rounded-md uppercase lg:text-xl mt-3 lg:absolute lg:top-24 lg:right-8 hover:bg-black duration-500"
             target="_blank">Inscreva-se</a>
     </main>
 
-    <script src="src/js/main.js"></script>
+    <script src="src/js/sub.js"></script>
 </body>
