--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </header>
 
-    <main style="background-image: url('src/images/2.jpg'); background-size: cover;" class="flex flex-col items-center h-82h">
+    <main style="background-image: url('src/images/bg-index.jpg'); background-size: cover;" class="flex flex-col items-center h-82h">
         <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 font-bold text-center">Academia Ibra: a Fábrica de campeões</h1>
         <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4">
             <h2 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h2>
