--- a/parceiros.html
+++ b/parceiros.html
@@ -89,7 +89,7 @@
         </section>
     </main>
 
-    <script src="src/js/main.js"></script>
+    <script src="src/js/sub.js"></script>
 </body>
 
 </html>
