--- a/regulamento.html
+++ b/regulamento.html
@@ -447,5 +447,5 @@
         </section>
     </main>
 
-    <script src="src/js/main.js"></script>
+    <script src="src/js/sub.js"></script>
 </body>
