--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body class="box-border">
     <header class="flex items-center justify-between p-2 font-barlow lg:p-0">
         <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo da Ibra Academia de Tênis de Mesa">
-        <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
+        <nav class="hidden bg-slate-600 h-90h w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
         lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
                 <li class="header__li--style"><a href="">Início</a></li>
@@ -44,8 +44,9 @@
     <main style="background-image: url('src/images/bg-index.jpg'); background-size: cover;" class="flex flex-col items-center h-82h">
         <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 font-bold text-center">Academia Ibra: a Fábrica de campeões</h1>
         <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4">
-            <h2 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h2>
-            <a href="circuito.html" id="main__button" class="main__button--style button__hover lg:w-3/5">Mais informações</a>
+            <!-- <h2 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h2> -->
+            <img src="src/images/circuito-logo.png" class="h-40h" alt="">
+            <a href="circuito.html" id="main__button" class="main__button--style button__hover lg:w-3/5">Inscreva-se</a>
         </div>
 
     </main>
