--- a/circuito.html
+++ b/circuito.html
@@ -22,7 +22,7 @@
 </head>
 
 <body class="bg-bodyBgColor">
-    <header class="bg-white flex items-center justify-between p-2 font-barlow h-10h">
+    <header class="bg-white flex items-center justify-between p-2 font-barlow">
         <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-90h w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
