Adjusting logo position

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 
     <main style="background-image: url('src/images/bg-index.jpg'); background-size: cover;" class="flex flex-col items-center h-90h">
         <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a Fábrica de campeões</h1>
-        <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4">
-            <!-- <h2 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h2> -->
-            <img src="src/images/circuito-logo.png" class="h-40h" alt="">
+        <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4 pb-20">
+            <img src="src/images/circuito-logo.png" class="h-40h" alt="Logo do circuito Ibra">
             <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button" class="main__button--style button__hover lg:w-3/5">Inscreva-se</a>
         </div>
 
