--- a/circuito.html
+++ b/circuito.html
@@ -24,7 +24,7 @@
 <body class="bg-bodyBgColor">
     <header class="bg-white flex items-center justify-between p-2 font-barlow">
         <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo do circuito Ibra de Tênis de Mesa">
-        <nav class="hidden bg-slate-600 h-1/222 w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
+        <nav class="hidden bg-slate-600 h-93% w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
                 <li
