--- a/circuito.html
+++ b/circuito.html
@@ -21,7 +21,7 @@
     <title>O Circuito</title>
 </head>
 
-<body class="bg-bodyBgColor">
+<body class="bg-bodyBgColor max-h-screen">
     <header class="bg-white flex items-center justify-between p-2 font-barlow">
         <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-93% w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
