--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Ibra Academia</title>
 </head>
 
-<body class="box-border">
+<body class="box-border max-h-screen">
     <header class="flex items-center justify-between p-2 font-barlow lg:p-0">
         <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo da Ibra Academia de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-90h w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
