Refactoring input.css

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <title>Ibra Academia</title>
 </head>
@@ -24,8 +24,8 @@
 <body class="box-border">
     <header class="flex items-center justify-between p-2 font-barlow lg:p-0">
         <img src="src/images/logo.jpg" class="h-12 lg:h-14 lg:ml-2" alt="Logo da Ibra Academia de Tênis de Mesa">
-        <nav class="hidden bg-slate-600 h-90h w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
-        lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
+        <nav
+            class="hidden bg-slate-600 h-90h w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
                 <li class="header__li--style"><a href="">Início</a></li>
                 <li class="header__li--style"><a href="">Sobre</a></li>
@@ -41,16 +41,20 @@
         </div>
     </header>
 
-    <main style="background-image: url('src/images/bg-index.jpg'); background-size: cover;" class="flex flex-col items-center h-90h">
-        <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a Fábrica de campeões</h1>
+    <main style="background-image: url('src/images/bg-index.jpg'); background-size: cover;"
+        class="flex flex-col items-center h-90h">
+        <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a
+            Fábrica de campeões</h1>
         <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4 pb-20">
             <img src="src/images/circuito-logo.png" class="h-40h" alt="Logo do circuito Ibra">
-            <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button" class="main__button--style button__hover lg:w-3/5">Inscreva-se</a>
+            <a href="https://form.jotform.com/contatoibratt/ficha-de-inscrio-circuito-ibra-de-t" id="main__button"
+                class="main__button--style button__hover lg:w-3/5">Inscreva-se</a>
         </div>
 
     </main>
 
-    <footer class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow absolute bottom-0 w-screen">
+    <footer
+        class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow absolute bottom-0 w-screen">
         <h2 class="uppercase">Academia Ibra Tênis de Mesa</h2>
         <div id="footer__container--icons" class="flex gap-x-4">
             <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i
