Mobile index: creating partners section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </header>
 
-    <main style="background-image: url('src/images/bg-index.jpg'); background-size: cover;"
+    <main style="background-image: url('src/images/bg-index2.jpeg'); background-size: cover;"
         class="flex flex-col items-center h-90h">
         <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 px-4 font-bold text-center">Academia Ibra: a
             Fábrica de campeões</h1>
@@ -51,10 +51,72 @@
                 class="main__button--style button__hover lg:w-3/5">Inscreva-se</a>
         </div>
 
+        <section id="patrocinadores" class="bg-white w-screen font-barlow flex flex-col items-center gap-y-8">
+            <article class="cbc flex flex-col items-center gap-y-4 py-4">
+                <div class="article__cbc--img">
+                    <img src="src/images/parceiros-cbc.jpeg" class="h-40" alt="Logo cbc">
+                </div>
+
+                <div class="article__cbc--text px-4 text-center">
+                    <h2 class="font-bold uppercase text-lg">Inspirar para o esporte e formar campeões</h2>
+                    <p class="mb-4">ouvidoria@cbclubes.org.br</p>
+                    <a href="https://www.cbclubes.org.br/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
+                </div>
+            </article>
+
+            <article class="cbc flex flex-col items-center gap-y-4 py-4">
+                <div class="article__cbc--img">
+                    <img src="src/images/parceiros-asg.jpg" class="h-40" alt="Logo AGS">
+                </div>
+
+                <div class="article__cbc--text px-4 text-center">
+                    <h2 class="font-bold uppercase text-lg">AGS tornando seus negócios possíveis</h2>
+                    <p class="mb-4">contato@agsrefrigeracao.com.br</p>
+                    <a href="https://agsrefrigeracao.com.br/novosite/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
+                </div>
+            </article>
+
+            <article class="cbc flex flex-col items-center gap-y-4 py-4">
+                <div class="article__cbc--img">
+                    <img src="src/images/parceiros-rc.jpg" class="h-40" alt="Logo RC Associados">
+                </div>
+
+                <div class="article__cbc--text px-4 text-center">
+                    <h2 class="font-bold uppercase text-lg">Constantemente desafiando a entregar o melhor aos nossos clientes</h2>
+                    <p class="mb-4">contato@rcassociados.adv.br</p>
+                    <a href="https://rcassociados.adv.br/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
+                </div>
+            </article>
+
+            <article class="cbc flex flex-col items-center gap-y-4 py-4">
+                <div class="article__cbc--img">
+                    <img src="src/images/parceiros-norteSul.jpg" class="h-40" alt="Logo Norte Sul turismo">
+                </div>
+
+                <div class="article__cbc--text px-4 text-center">
+                    <h2 class="font-bold uppercase text-lg">Especialista em realizar sonhos</h2>
+                    <p class="mb-4">nortesulcturismo@gmail.com</p>
+                    <a href="https://www.instagram.com/nortesulturismo_/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
+                </div>
+            </article>
+
+            <article class="cbc flex flex-col items-center gap-y-4 py-4">
+                <div class="article__cbc--img">
+                    <img src="src/images/parceiros-prefeitura.jpeg" class="h-20" alt="Logo Prefeitura de Caruaru">
+                </div>
+
+                <div class="article__cbc--text px-4 text-center">
+                    <h2 class="font-bold uppercase text-lg">A gente avança fazendo melhor</h2>
+                    <p class="mb-4">ouvidoria@caruaru.pe.gov.br</p>
+                    <a href="https://caruaru.pe.gov.br/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
+                </div>
+            </article>
+        </section>
+
     </main>
 
-    <footer
-        class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow absolute bottom-0 w-screen">
+    <!-- <footer
+        class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow">
         <h2 class="uppercase">Academia Ibra Tênis de Mesa</h2>
         <div id="footer__container--icons" class="flex gap-x-4">
             <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i
@@ -64,7 +126,7 @@
             <a href="https://goo.gl/maps/LLFepdFvPgzSioes5?coh=178571&entry=tt" target="_blank"><i
                     class="fa-solid fa-location-dot"></i></a>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="src/js/main.js"></script>
 </body>
