Mobile index: creating articles border

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <section id="patrocinadores" class="bg-white w-screen font-barlow flex flex-col items-center gap-y-8">
-            <article class="cbc flex flex-col items-center gap-y-4 py-4">
+            <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
                 <div class="article__cbc--img">
                     <img src="src/images/parceiros-cbc.jpeg" class="h-40" alt="Logo cbc">
                 </div>
@@ -64,7 +64,7 @@
                 </div>
             </article>
 
-            <article class="cbc flex flex-col items-center gap-y-4 py-4">
+            <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
                 <div class="article__cbc--img">
                     <img src="src/images/parceiros-asg.jpg" class="h-40" alt="Logo AGS">
                 </div>
@@ -76,7 +76,7 @@
                 </div>
             </article>
 
-            <article class="cbc flex flex-col items-center gap-y-4 py-4">
+            <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
                 <div class="article__cbc--img">
                     <img src="src/images/parceiros-rc.jpg" class="h-40" alt="Logo RC Associados">
                 </div>
@@ -88,7 +88,7 @@
                 </div>
             </article>
 
-            <article class="cbc flex flex-col items-center gap-y-4 py-4">
+            <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
                 <div class="article__cbc--img">
                     <img src="src/images/parceiros-norteSul.jpg" class="h-40" alt="Logo Norte Sul turismo">
                 </div>
@@ -100,7 +100,7 @@
                 </div>
             </article>
 
-            <article class="cbc flex flex-col items-center gap-y-4 py-4">
+            <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
                 <div class="article__cbc--img">
                     <img src="src/images/parceiros-prefeitura.jpeg" class="h-20" alt="Logo Prefeitura de Caruaru">
                 </div>
