Mobile index: Updating articles size

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
                 <div class="article__cbc--img">
-                    <img src="src/images/parceiros-rc.jpg" class="h-40" alt="Logo RC Associados">
+                    <img src="src/images/parceiros-rc.jpg" class="h-32" alt="Logo RC Associados">
                 </div>
 
                 <div class="article__cbc--text px-4 text-center">
@@ -100,7 +100,7 @@
                 </div>
             </article>
 
-            <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
+            <article class="cbc flex flex-col items-center gap-y-10 py-8 !h-72 index__article--border">
                 <div class="article__cbc--img">
                     <img src="src/images/parceiros-prefeitura.jpeg" class="h-20" alt="Logo Prefeitura de Caruaru">
                 </div>
