Desktop index: Updating articles

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
                 class="main__button--style button__hover lg:w-3/5">Inscreva-se</a>
         </div>
 
-        <section id="patrocinadores" class="bg-white w-screen font-barlow flex flex-col items-center gap-y-8">
-            <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
-                <div class="article__cbc--img">
+        <section id="patrocinadores" class="testando">
+            <article class="bg-white flex flex-col items-center gap-y-10 py-8 index__article--border index__article--lg">
                     <img src="src/images/parceiros-cbc.jpeg" class="h-40" alt="Logo cbc">
                 </div>
 
@@ -64,9 +63,9 @@
                 </div>
             </article>
 
-            <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
-                <div class="article__cbc--img">
-                    <img src="src/images/parceiros-asg.jpg" class="h-40" alt="Logo AGS">
+            <article class="bg-white flex flex-col items-center gap-y-10 py-8 index__article--border index__article--lg">
+                <div>
+                    <img src="src/images/parceiros-asg.jpg" class="h-40 lg:w-40 lg:object-cover lg:object-right" alt="Logo AGS">
                 </div>
 
                 <div class="article__cbc--text px-4 text-center">
@@ -76,20 +75,20 @@
                 </div>
             </article>
 
-            <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
-                <div class="article__cbc--img">
+            <article class="bg-white flex flex-col items-center gap-y-10 py-8 index__article--border index__article--lg">
+                <div>
                     <img src="src/images/parceiros-rc.jpg" class="h-32" alt="Logo RC Associados">
                 </div>
 
                 <div class="article__cbc--text px-4 text-center">
-                    <h2 class="font-bold uppercase text-lg">Constantemente desafiando a entregar o melhor aos nossos clientes</h2>
+                    <h2 class="font-bold uppercase text-lg max-w-xs">Constantemente desafiando a entregar o melhor aos nossos clientes</h2>
                     <p class="mb-4">contato@rcassociados.adv.br</p>
                     <a href="https://rcassociados.adv.br/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
                 </div>
             </article>
 
-            <article class="cbc flex flex-col items-center gap-y-10 py-8 index__article--border">
-                <div class="article__cbc--img">
+            <article class="bg-white flex flex-col items-center gap-y-10 py-8 index__article--border index__article--lg">
+                <div>
                     <img src="src/images/parceiros-norteSul.jpg" class="h-40" alt="Logo Norte Sul turismo">
                 </div>
 
@@ -100,9 +99,9 @@
                 </div>
             </article>
 
-            <article class="cbc flex flex-col items-center gap-y-10 py-8 !h-72 index__article--border">
-                <div class="article__cbc--img">
-                    <img src="src/images/parceiros-prefeitura.jpeg" class="h-20" alt="Logo Prefeitura de Caruaru">
+            <article class="bg-white flex flex-col items-center gap-y-10 py-8 !h-72 index__article--border index__article--lg">
+                <div>
+                    <img src="src/images/parceiros-prefeitura.jpeg" class="h-20 lg:h-16" alt="Logo Prefeitura de Caruaru">
                 </div>
 
                 <div class="article__cbc--text px-4 text-center">
