--- a/index.html
+++ b/index.html
@@ -51,43 +51,45 @@
                 class="main__button--style button__hover lg:w-3/5">Inscreva-se</a>
         </div>
 
-        <section id="patrocinadores" class="testando">
-            <article class="bg-white flex flex-col items-center gap-y-10 py-8 index__article--border index__article--lg">
+        <section id="patrocinadores" class="main__patrocinadores">
+            <h2 class="text-white text-4xl font-bold uppercase">Nossos parceiros</h2>
+
+            <article id="patrocinadores__article--cbc" class="bg-white flex flex-col items-center gap-y-10 py-8 justify-center index__article--border index__article--lg">
                     <img src="src/images/parceiros-cbc.jpeg" class="h-40" alt="Logo cbc">
                 </div>
 
                 <div class="article__cbc--text px-4 text-center">
                     <h2 class="font-bold uppercase text-lg">Inspirar para o esporte e formar campeões</h2>
                     <p class="mb-4">ouvidoria@cbclubes.org.br</p>
-                    <a href="https://www.cbclubes.org.br/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
+                    <a href="https://www.cbclubes.org.br/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para visitar a nossa página</a>
                 </div>
             </article>
 
-            <article class="bg-white flex flex-col items-center gap-y-10 py-8 index__article--border index__article--lg">
+            <article id="patrocinadores__article--asg" class="bg-white flex flex-col items-center gap-y-10 py-8 justify-center index__article--border index__article--lg">
                 <div>
-                    <img src="src/images/parceiros-asg.jpg" class="h-40 lg:w-40 lg:object-cover lg:object-right" alt="Logo AGS">
+                    <img src="src/images/parceiros-asg.jpg" class="h-40 lg:w-40 lg:object-cover lg:object-right" alt="Logo ASG">
                 </div>
 
                 <div class="article__cbc--text px-4 text-center">
                     <h2 class="font-bold uppercase text-lg">AGS tornando seus negócios possíveis</h2>
                     <p class="mb-4">contato@agsrefrigeracao.com.br</p>
-                    <a href="https://agsrefrigeracao.com.br/novosite/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
+                    <a href="https://agsrefrigeracao.com.br/novosite/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para visitar a nossa página</a>
                 </div>
             </article>
 
-            <article class="bg-white flex flex-col items-center gap-y-10 py-8 index__article--border index__article--lg">
+            <article id="patrocinadores__article--rc" class="bg-white flex flex-col items-center gap-y-10 py-8 justify-center lg:h-52 index__article--border index__article--lg">
                 <div>
                     <img src="src/images/parceiros-rc.jpg" class="h-32" alt="Logo RC Associados">
                 </div>
 
                 <div class="article__cbc--text px-4 text-center">
-                    <h2 class="font-bold uppercase text-lg max-w-xs">Constantemente desafiando a entregar o melhor aos nossos clientes</h2>
+                    <h2 class="font-bold uppercase text-lg max-w-xs">Estamos prontos para atender você</h2>
                     <p class="mb-4">contato@rcassociados.adv.br</p>
-                    <a href="https://rcassociados.adv.br/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
+                    <a href="https://rcassociados.adv.br/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para visitar a nossa página</a>
                 </div>
             </article>
 
-            <article class="bg-white flex flex-col items-center gap-y-10 py-8 index__article--border index__article--lg">
+            <article id="patrocinadores__article--norteSul" class="bg-white flex flex-col items-center gap-y-10 py-8 justify-center index__article--border index__article--lg">
                 <div>
                     <img src="src/images/parceiros-norteSul.jpg" class="h-40" alt="Logo Norte Sul turismo">
                 </div>
@@ -95,19 +97,19 @@
                 <div class="article__cbc--text px-4 text-center">
                     <h2 class="font-bold uppercase text-lg">Especialista em realizar sonhos</h2>
                     <p class="mb-4">nortesulcturismo@gmail.com</p>
-                    <a href="https://www.instagram.com/nortesulturismo_/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
+                    <a href="https://www.instagram.com/nortesulturismo_/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para visitar a nossa página</a>
                 </div>
             </article>
 
-            <article class="bg-white flex flex-col items-center gap-y-10 py-8 !h-72 index__article--border index__article--lg">
+            <article id="patrocinadores__article--prefeitura" class="bg-white flex flex-col items-center gap-y-10 py-8 justify-center index__article--border index__article--lg">
                 <div>
-                    <img src="src/images/parceiros-prefeitura.jpeg" class="h-20 lg:h-16" alt="Logo Prefeitura de Caruaru">
+                    <img src="src/images/parceiros-prefeitura.jpeg" class="h-20 lg:h-12" alt="Logo Prefeitura de Caruaru">
                 </div>
 
                 <div class="article__cbc--text px-4 text-center">
                     <h2 class="font-bold uppercase text-lg">A gente avança fazendo melhor</h2>
                     <p class="mb-4">ouvidoria@caruaru.pe.gov.br</p>
-                    <a href="https://caruaru.pe.gov.br/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md">Clique para visitar a nossa página</a>
+                    <a href="https://caruaru.pe.gov.br/" target="_blank" class="bg-gray-800 text-white px-4 py-2 rounded-md index__article--hover">Clique para visitar a nossa página</a>
                 </div>
             </article>
         </section>
